--- a/vcastplay-cms/src/app/components/audience-tag-filters/audience-tag-filters.component.html
+++ b/vcastplay-cms/src/app/components/audience-tag-filters/audience-tag-filters.component.html
@@ -3,24 +3,24 @@
         <div class="col-span-1 md:col-span-5">
             <p-floatlabel variant="on">
                 <p-select [options]="audienceTagsLists()" optionLabel="name" optionValue="name" formControlName="category" appendTo="body" fluid />
-                <label for="category">Category</label>
+                <label for="category">Tags</label>
             </p-floatlabel>
         </div>
         <div class="col-span-1 md:col-span-5">
             <p-floatlabel variant="on">
                 <p-select [options]="categoryLists()" formControlName="name" appendTo="body" fluid />
-                <label for="category">Name</label>
+                <label for="category">Values</label>
             </p-floatlabel>
         </div>
         <div class="col-span-1 md:col-span-2">
             <p-button label="Add" icon="pi pi-plus" (onClick)="onClickAddTag()" size="small" fluid />
         </div>
     </div>
-    <p-table [value]="audienceTags" [scrollable]="true" scrollHeight="300px" size="small" stripedRows showGridlines>
+    <p-table [value]="audienceTags" [scrollable]="true" scrollHeight="180px" size="small" stripedRows showGridlines>
         <ng-template #header>
             <tr>
-                <th>Category</th>
-                <th>Name</th>
+                <th>Tags</th>
+                <th>Values</th>
                 <th style="width: 12%;">
                     <div class="text-center">Actions</div>
                 </th>
