--- a/vcastplay-cms/src/app/components/playlist/playlist-select-contents/playlist-select-contents.component.html
+++ b/vcastplay-cms/src/app/components/playlist/playlist-select-contents/playlist-select-contents.component.html
@@ -1,18 +1,41 @@
 <p-stepper [value]="activeStep()" [linear]="true">
     <p-step-list>
-        <p-step [value]="1">Tags</p-step>
+        <p-step [value]="1">Tags & Filters</p-step>
         <p-step [value]="2">Contents</p-step>
+        @if (steps > 2) {
+            <p-step [value]="3">Playlist</p-step>
+        }
     </p-step-list>
     <p-step-panels>
         <p-step-panel [value]="1">
             <ng-template #content>
-                <app-audience-tag-filters [audienceTagForm]="audienceTagForm" />
+                <div class="flex flex-col gap-2">
+                    @if (showCategory) {
+                        <div class="grid grid-cols-1 md:grid-cols-12 gap-2" [formGroup]="categoryForm">
+                            <div class="col-span-1 md:col-span-5">
+                                <p-floatlabel variant="on">
+                                    <p-select inputId="category" [options]="filterCategory()" optionLabel="label" optionValue="value" 
+                                        formControlName="category" appendTo="body" showClear fluid />
+                                    <label for="category">Category</label>
+                                </p-floatlabel>
+                            </div>
+                            <div class="col-span-1 md:col-span-5">
+                                <p-floatlabel variant="on">
+                                    <p-select inputId="subCategory" [options]="filterSubCategory()" optionLabel="label" optionValue="value" 
+                                        formControlName="subCategory" appendTo="body" showClear fluid />
+                                    <label for="subCategory">Sub Category</label>
+                                </p-floatlabel>
+                            </div>
+                        </div>
+                    }
+                    <app-audience-tag-filters [audienceTagForm]="audienceTagForm" />
+                </div>
             </ng-template>
         </p-step-panel>
         <p-step-panel [value]="2">
             <ng-template #content>
-                <div class="flex" [formGroup]="playListForm">
-                    <div class="grid grid-cols-2 xl:grid-cols-3 gap-3 w-full">
+                <div class="flex overflow-y-auto h-[280px]" [formGroup]="playListForm">
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-3 w-full">
                         @for (item of filteredAssets(); track $index) {
                             <app-asset-list-item [asset]="item" />
                         } @empty {
@@ -24,5 +47,22 @@
                 </div>
             </ng-template>
         </p-step-panel>
+        @if (steps > 2) {
+            <p-step-panel [value]="3">
+                <ng-template #content>
+                    <div class="flex flex-col gap-4" [formGroup]="playListForm">
+                        <p-floatlabel variant="on">
+                            <input id="name" pInputText formControlName="name" 
+                                [ngClass]="{ 'ng-invalid ng-dirty': formControl('name').invalid && formControl('name').touched }" fluid />
+                            <label for="name">Name</label>
+                        </p-floatlabel>
+                        <p-floatlabel variant="on">
+                            <textarea id="description" rows="10" cols="30" pTextarea formControlName="description" fluid></textarea>
+                            <label for="description">Description</label>
+                        </p-floatlabel>
+                    </div>
+                </ng-template>
+            </p-step-panel>
+        }
     </p-step-panels>
 </p-stepper>
