--- a/vcastplay-cms/src/app/pages/playlist/playlist-details/playlist-details.component.html
+++ b/vcastplay-cms/src/app/pages/playlist/playlist-details/playlist-details.component.html
@@ -11,14 +11,8 @@
                             [severity]="utils.getStatus(formControl('status').value)" />
                     }
                 </div>
-                <div class="hidden md:flex gap-2">
-                    <!-- <p-button label="Get Contents" icon="pi pi-images" size="small" severity="info" (onClick)="onClickGetContents()" /> -->
-                    <p-button label="Save Playlist" icon="pi pi-save" size="small" (onClick)="onClickSave($event)" />
-                </div>
-                <div class="flex md:hidden gap-2">
-                    <!-- <p-button icon="pi pi-images" size="small" severity="info" (onClick)="onClickGetContents()" /> -->
-                    <p-button icon="pi pi-save" size="small" (onClick)="onClickSave($event)" />
-                </div>
+                <p-button class="hidden md:flex gap-2" label="Save Playlist" icon="pi pi-save" (onClick)="onClickSave($event)" />
+                <p-button class="flex md:hidden gap-2" icon="pi pi-save" (onClick)="onClickSave($event)" />
             </div>
         </ng-template>
         <div class="grid grid-cols-1 md:grid-cols-12 gap-2 h-full mt-2">
@@ -48,15 +42,11 @@
                     [currentContent]="playlistService.currentContent()" />
             </div>
 
+            <!-- Assets Lists -->
             <div class="col-span-1 md:col-span-6 xl:col-span-4">
                 <div class="flex flex-col gap-2 border border-[var(--p-surface-300)] rounded-lg h-80 md:h-full">
                     <div class="p-3 flex items-center gap-2">
-                        <p-inputgroup>
-                            <input type="text" pInputText [formControl]="keywords" placeholder="Search" />
-                            <p-inputgroup-addon>
-                                <p-button pTooltip="Filter" tooltipPosition="bottom" icon="pi pi-filter" />
-                            </p-inputgroup-addon>
-                        </p-inputgroup>
+                        <app-asset-filter class="w-full" (filterChange)="onFilterChange($event)" />
                         <p-selectbutton [options]="assetViewModes" [formControl]="assetViewModeCtrl" optionLabel="label" optionValue="label" [allowEmpty]="false">
                             <ng-template #item let-item>
                                 <i [class]="item.icon" [pTooltip]="item.label" tooltipPosition="bottom"></i>
@@ -73,7 +63,7 @@
                                 <app-asset-list-item [asset]="item" />
                             } @empty {
                                 <div class="flex items-center justify-center h-full w-full" [ngClass]="{ 'col-span-3 ': assetViewModeSignal() == 'Grid' }">
-                                    <p class="text-gray-400 italic">Click "Get Contents" to add contents</p>
+                                    <p class="text-gray-400 italic">No items found</p>
                                 </div>
                             }
                         </div>
@@ -115,21 +105,6 @@
         </ng-template>
     </p-card>
 </div>
-
-<p-dialog header="Select Contents" [(visible)]="showContents" [style]="{ width: '50rem', height: '520px' }" [draggable]="false" closable modal>
-    <app-playlist-select-contents [playListForm]="playListForm" (assetSelected)="selectedAssets.set($event)" />
-    <ng-template #footer>
-        <div class="flex items-center w-full gap-2">
-            @if (activeStep() > 1) {
-                <p-button label="Back" severity="secondary" icon="pi pi-arrow-left" (onClick)="activeStep.set(1)" size="small" />
-                <p-button class="ml-auto" label="Complete" severity="success"
-                    icon="pi pi-check" iconPos="right" (onClick)="onClickComplete($event)" size="small" />
-            } @else {
-                <p-button class="ml-auto" label="Next" icon="pi pi-arrow-right" (onClick)="activeStep.set(2)" size="small" />
-            }
-        </div>
-    </ng-template>
-</p-dialog>
 
 <p-toast />
 <p-confirmdialog />
