--- a/vcastplay-cms/src/app/pages/assets/asset-filter/asset-filter.component.html
+++ b/vcastplay-cms/src/app/pages/assets/asset-filter/asset-filter.component.html
@@ -5,29 +5,25 @@
             <p-button (onClick)="onClickApplyAudienceTag()" icon="pi pi-search" />
         </p-inputgroup-addon>
     </p-input-group>
-    <p-button icon="pi pi-filter" pTooltip="More Filter" tooltipPosition="bottom" [text]="true" (onClick)="filter.toggle($event)" />
+    <p-button pTooltip="More Filter" tooltipPosition="bottom" [text]="true" (onClick)="filter.toggle($event)">
+        <ng-template #icon>
+            <p-overlaybadge severity="danger" badgeSize="small" [badgeDisabled]="!useFilter()">
+                <i class="pi pi-filter"></i>
+            </p-overlaybadge>
+        </ng-template>
+    </p-button>
     <p-popover title="Filter" #filter>
-        <div class="flex flex-col gap-5 w[25rem]">
-            <p class="font-medium text-surface-500 dark:text-surface-0 block">Filter:</p>
-            <p-select [options]="categories()" formControlName="category" optionLabel="label" optionValue="value" placeholder="Category" />
-            <p-select [options]="subCategories()" formControlName="subCategory" optionLabel="label" optionValue="value" placeholder="Sub Category" />
+        <p class="font-medium text-surface-500 dark:text-surface-0 block">Filter:</p>
+        <div class="grid grid-cols-2 gap-4 w[25rem] my-3">
+            <p-select [options]="filterCategory()" formControlName="category" placeholder="Category" />
+            <p-select [options]="filterSubCategory()" formControlName="subCategory" placeholder="Sub Category" />
             <p-select [options]="fileTypes()" formControlName="type" optionLabel="label" optionValue="value" placeholder="Types" />
             <p-select [options]="orientations()" formControlName="orientation" optionLabel="label" optionValue="value" placeholder="Orientation" />
-            <!-- <p-select [options]="status" formControlName="status" optionLabel="label" optionValue="value" placeholder="Status" />
-            <p-select [options]="sortBy" formControlName="sortBy" optionLabel="label" optionValue="value" placeholder="Sort By" class="w-50" />
-            <div class="flex flex-row gap-4">
-                @for (item of [ 'asc', 'desc' ]; track $index) {
-                    <div>
-                        <p-radiobutton [inputId]="item" [value]="item" formControlName="sort"></p-radiobutton>
-                        <label [for]="item" class="ml-2">{{ item.toUpperCase() }}</label>
-                    </div>
-                }
-            </div> -->
-            <p-button label="Audience Tag" (onClick)="isShowAudienceTag.set(true)" outlined fluid />
-            <div class="flex gap-2 justify-center items-center">
-                <p-button severity="secondary" (onClick)="onClickClear(filter)" label="Clear" size="small" [text]="true" icon="pi pi-times"></p-button>
-                <p-button (onClick)="onClickApply(filter)" label="Apply" size="small" icon="pi pi-check"></p-button>
-            </div>
+            <p-button class="col-span-2" label="Audience Tag" icon="pi pi-tag" (onClick)="isShowAudienceTag.set(true)" outlined fluid />
+        </div>
+        <div class="flex gap-2 justify-end items-center">
+            <p-button severity="secondary" (onClick)="onClickClear(filter)" label="Clear" size="small" [text]="true" icon="pi pi-times"></p-button>
+            <p-button (onClick)="onClickApply(filter)" label="Apply" size="small" icon="pi pi-check"></p-button>
         </div>
     </p-popover>
 </form>
