--- a/vcastplay-cms/src/app/pages/screens/screen-details/screen-details.component.html
+++ b/vcastplay-cms/src/app/pages/screens/screen-details/screen-details.component.html
@@ -51,14 +51,14 @@
                 </div>
                 <div class="col-span-1 md:col-span-6">
                     <p-floatlabel variant="on">
-                        <p-select inputId="group" [options]="groups()" optionLabel="label" optionValue="value" formControlName="group" 
+                        <p-select inputId="group" [options]="filterGroups()" formControlName="group" 
                             [ngClass]="{ 'ng-invalid ng-dirty': formControl('group').invalid && formControl('group').touched }" appendTo="body" showClear fluid />
                         <label for="group">Group</label>
                     </p-floatlabel>
                 </div>
                 <div class="col-span-1 md:col-span-6">
                     <p-floatlabel variant="on">
-                        <p-select inputId="subGroup" [options]="subGroups()" optionLabel="label" optionValue="value" formControlName="subGroup"  
+                        <p-select inputId="subGroup" [options]="filterSubGroups()" formControlName="subGroup"  
                             [ngClass]="{ 'ng-invalid ng-dirty': formControl('subGroup').invalid && formControl('subGroup').touched }" appendTo="body" showClear fluid />
                         <label for="subGroup">Sub Group</label>
                     </p-floatlabel>
@@ -103,7 +103,8 @@
                 <div class="col-span-1 md:col-span-6 flex flex-col gap-2">
                     <p-inputgroup>
                         <p-floatlabel variant="on">
-                            <input id="tag" type="text" pInputText [formControl]="tagControl" fluid>
+                            <!-- <input id="tag" type="text" pInputText [formControl]="tagControl" fluid> -->
+                            <p-select id="tag" [options]="tagsFilter()" [formControl]="tagControl" fluid />
                             <label for="tag">Tag</label>
                         </p-floatlabel>
                         <p-inputgroup-addon>
