--- a/vcastplay-cms/src/app/pages/settings/tags/tags.component.html
+++ b/vcastplay-cms/src/app/pages/settings/tags/tags.component.html
@@ -39,8 +39,8 @@
                         </ng-template>
                         <ng-template #emptymessage>
                             <tr>
-                                <td colspan="2" [height]="20">
-                                    <div class="flex justify-center p-5"><p>No {{ item.name }} tags found</p></div>
+                                <td colspan="2">
+                                    <div class="flex justify-center p-5"><p>No {{ item.name }} found</p></div>
                                 </td>
                             </tr>
                         </ng-template>
